[FIX]Some margin-top added to sitetitle since it was too much at the top when no horizontal menu is displayed above it
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/5.x@26098 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/jqui.css
+++ b/styles/jqui.css
@@ -189,6 +189,7 @@ div.error {
 }
 
 #sitetitle {
+	margin-top: 20px;
 	font-size: 2.4em;
 }
 
